--- a/src/app/places/leaverequest/new-request/new-request.page.html
+++ b/src/app/places/leaverequest/new-request/new-request.page.html
@@ -31,8 +31,8 @@
           <ion-item>
             <ion-label position="floating">Type </ion-label>
             <ion-select formControlName="type" name="leave-type">
-              <ion-select-option value="1">Sick</ion-select-option>
-              <ion-select-option value="2">Vacation</ion-select-option>
+              <ion-select-option value="Sick">Sick</ion-select-option>
+              <ion-select-option value="Vacation">Vacation</ion-select-option>
             </ion-select>
           </ion-item>
         </ion-col>
@@ -83,6 +83,7 @@
               formControlName="dateTo" 
               min="2021-01-01" 
               max="2022-12-31"
+              
               ></ion-datetime>
             </ion-item>
           </ion-col>
@@ -98,14 +99,14 @@
           <ion-col >
         <ion-buttons>
           <ion-button 
-          (click)="onSubmitRequest()" 
+          size="large"
           type="submit" 
-          fill="outline" 
-          color="success" 
-          expand="round" 
+          fill="solid" 
+          color="primary" 
+          expand="block" 
           [disabled]="!f.valid || !datesValid()"
           >
-            Submit
+            Create
           </ion-button>
         </ion-buttons>
           </ion-col>
