--- a/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -7,7 +7,7 @@
     </ion-buttons>
     <ion-title>Edit {{ place.firstName }}</ion-title>
     <ion-buttons slot="primary">
-      <ion-button (click)="onUpdateEmployee()">
+      <ion-button (click)="onUpdateEmployee()" >
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -15,86 +15,68 @@
 </ion-header>
 
 <ion-content> 
-  
   <form [formGroup]="form">
-   <ion-card-content>
-     <ion-card>
-      <ion-toolbar><ion-text>Contact Information</ion-text></ion-toolbar>
-   <ion-grid>
-     
+   <ion-grid>   
      <ion-row>
        <ion-col size-sm="6" offset-sm="3">
+         <ion-card-content>
+            <ion-card> 
+           <ion-toolbar><ion-text>Contact Information</ion-text></ion-toolbar>   
          <ion-item>
            <ion-label position="floating">First Name </ion-label>
            <ion-input type="text"  autocorrect formControlName="fName"></ion-input>
          </ion-item>
-       </ion-col>
-     </ion-row>
-     <ion-row>
-       <ion-col size-sm="6" offset-sm="3">
          <ion-item>
            <ion-label position="floating">Last Name</ion-label>
            <ion-input type="text"  autocorrect formControlName="lName"></ion-input>
          </ion-item>
-       </ion-col>
-     </ion-row >
-     <ion-row>
-       <ion-col size-lg="6" offset-lg="3" size-sm="6" offset-sm="3">
          <ion-item>
            <ion-label position="floating">Phone Number</ion-label>
            <ion-input type="number" formControlName="phoneNumber"></ion-input>
          </ion-item>
-       </ion-col>
-     </ion-row>
-     <ion-row>
-      <ion-col size-lg="6" offset-lg="3" size-sm="6" offset-sm="3">
         <ion-item>
           <ion-label position="floating">Email Address</ion-label>
           <ion-input type="text" autocorrect formControlName="emailAddress"></ion-input>
         </ion-item>
+      </ion-card>  
+      </ion-card-content>  
       </ion-col>
     </ion-row>
-    
-        
-     
-     
-     </ion-grid>
-
-
-   </ion-card>
+</ion-grid>
+  
    
- </ion-card-content>
- <ion-card-content>
-  <ion-card>
-   <ion-toolbar><ion-text>Employment Information</ion-text></ion-toolbar>
-<ion-grid>
-  
+<ion-grid> 
   <ion-row>
     <ion-col size-sm="6" offset-sm="3">
-      <ion-item>
-        <ion-label position="floating">Job Title</ion-label>
-        <ion-input type="text"  autocorrect formControlName="jobTitle"></ion-input>
-      </ion-item>
+      <ion-card-content>
+        <ion-card>
+          <ion-toolbar><ion-text>Employment Information</ion-text></ion-toolbar>
+            <ion-item>
+                <ion-label position="floating">Job Title</ion-label>
+                <ion-input type="text"  autocorrect formControlName="jobTitle"></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-label position="floating">Pay Group</ion-label>
+                <ion-input type="text"  autocorrect formControlName="payGroup"></ion-input>
+            </ion-item>
+        </ion-card>   
+      </ion-card-content>
     </ion-col>
-  </ion-row>
-  <ion-row>
-    <ion-col size-sm="6" offset-sm="3">
-      <ion-item>
-        <ion-label position="floating">Pay Group</ion-label>
-        <ion-input type="text"  autocorrect formControlName="payRate"></ion-input>
-      </ion-item>
-    </ion-col>
-  </ion-row >
- 
-     
-  
-  
-  </ion-grid>
-
-
-</ion-card>
-
-</ion-card-content>
-</form>
+  </ion-row >   
+   </ion-grid> 
+  </form>
 </ion-content>
+    
+  
+  
+ 
 
+
+
+
+
+
+
+
+
+              
