--- a/src/app/places/discover/new-job-site/new-job-site.page.html
+++ b/src/app/places/discover/new-job-site/new-job-site.page.html
@@ -16,20 +16,24 @@
             <ion-card> 
            <ion-toolbar><ion-text>Contact Information</ion-text></ion-toolbar>   
          <ion-item>
-           <ion-label position="floating">First Name </ion-label>
+           <ion-label position="floating">Location Name </ion-label>
            <ion-input type="text"  autocorrect formControlName="fName"></ion-input>
          </ion-item>
          <ion-item>
-           <ion-label position="floating">Last Name</ion-label>
-           <ion-input type="text"  autocorrect formControlName="lName"></ion-input>
+           <ion-label position="floating">Phone Number</ion-label>
+           <ion-input type="text"  autocorrect formControlName="phoneNumber"></ion-input>
          </ion-item>
          <ion-item>
-           <ion-label position="floating">Phone Number</ion-label>
-           <ion-input type="number" formControlName="phoneNumber"></ion-input>
+           <ion-label position="floating">Email Address</ion-label>
+           <ion-input type="text" formControlName="emailAddress"></ion-input>
          </ion-item>
+         <ion-item>
+          <ion-label position="floating">Business Type</ion-label>
+          <ion-input type="text" formControlName="businessType"></ion-input>
+        </ion-item>
         <ion-item>
-          <ion-label position="floating">Email Address</ion-label>
-          <ion-input type="text"  formControlName="emailAddress"></ion-input>
+          <ion-label position="floating">Address</ion-label>
+          <ion-input type="text"  formControlName="locationAddress"></ion-input>
         </ion-item>
       </ion-card>  
       </ion-card-content>  
@@ -38,40 +42,26 @@
 
   <ion-row>
     <ion-col size-sm="6" offset-sm="3">
-      <ion-card-content>
-        <ion-card>
-          <ion-toolbar><ion-text>Employment Information</ion-text></ion-toolbar>
-            <ion-item>
-                <ion-label position="floating">Job Title</ion-label>
-                <ion-input type="text"  autocorrect formControlName="jobTitle"></ion-input>
-            </ion-item>
-            <ion-item>
-                <ion-label position="floating">Pay Group</ion-label>
-                <ion-input type="text"  autocorrect formControlName="payGroup"></ion-input>
-            </ion-item>
-        </ion-card>
-
-        <ion-grid>
-          <div style="display: flex; justify-content: center;">
-            <ion-row>
-              <ion-col >
-            <ion-buttons>
-              <ion-button 
-              
-              type="submit" 
-              fill="solid" 
-              color="primary" 
-              expand="block" 
-              [disabled]="!f.valid"
-              >
-                Add
-              </ion-button>
-            </ion-buttons>
-              </ion-col>
-            </ion-row>
-          </div>  
-    </ion-grid>   
-      </ion-card-content>
+      <ion-grid>
+        <div style="display: flex; justify-content: center;">
+          <ion-row>
+            <ion-col >
+          <ion-buttons>
+            <ion-button 
+            
+            type="submit" 
+            fill="solid" 
+            color="primary" 
+            expand="block" 
+            [disabled]="!f.valid"
+            >
+              Add
+            </ion-button>
+          </ion-buttons>
+            </ion-col>
+          </ion-row>
+        </div>  
+  </ion-grid> 
     </ion-col>
   </ion-row >   
    </ion-grid> 
