--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -38,8 +38,8 @@
               <ion-img [src]="job.imageUrl"></ion-img>
             </ion-thumbnail>
             <ion-label>
-              <h2>{{ job.firstName }}</h2>
-              <p><ion-text color="primary">{{ job.description }}</ion-text></p>
+              <h2>{{ job.businessName }}</h2>
+              <p><ion-text color="primary">{{ job.jobAddress }}</ion-text></p>
             </ion-label>
           </ion-item>
         </ion-virtual-scroll>
