--- a/src/app/places/leaverequest/leaverequest-item/leaverequest-item.component.html
+++ b/src/app/places/leaverequest/leaverequest-item/leaverequest-item.component.html
@@ -9,8 +9,8 @@
             <ion-icon color="primary" class="space-left" name="calendar"></ion-icon>
             <ion-text class="space-left" class="ion-padding">{{ getDummyDate() | date}}</ion-text>
             </div>
-          <h1>{{ request.firstName }}</h1>
-          <h2>{{ request.description }}</h2>
+          <h1>{{ request.name }}</h1>
+          <h2>{{ request.reason }}</h2>
           <ion-header></ion-header>
           </ion-label>
         
