--- a/src/app/places/leaverequest/leaverequest.page.html
+++ b/src/app/places/leaverequest/leaverequest.page.html
@@ -21,22 +21,34 @@
 <ion-content class="ion-padding">
   <ion-grid>
     <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
+      <ion-col size="12" size-sm="8" offset-sm="2">
+        
         <ion-list>
-          <ion-item-sliding *ngFor="let request of request" #slidingItem>
-            <app-leaverequest-item [request]="request"></app-leaverequest-item>
-              <ion-item-options side="end">
-                <ion-item-option
-                  color="danger"
-                  (click)="onViewLeave()"
-                  >
-                  <ion-icon name="close-outline" slot="icon-only"></ion-icon>
-                </ion-item-option>
-              </ion-item-options>
+          <ion-item-sliding
+          *ngFor="let request of loadedRequests"
+          #slidingRequest
+          >
+            <ion-item
+            
+            [routerLink]="['/', 'places', 'tabs', 'leaverequest', request.id]"
+            detail
+            
+          >
+            
+            <ion-label>
+              <h1>{{ request.name}}</h1>
+              <h2>{{ request.reason }}</h2>
+            </ion-label>
+          </ion-item>
+        
+          <ion-item-options>
+            <ion-item-option color="danger" (click)="onDelete(request.id, slidingRequest)">
+              <ion-icon name="trash" slot="icon-only"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
           </ion-item-sliding>
-        </ion-list>
+          </ion-list>
       </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
-
