--- a/src/app/places/timesheet/timesheet.page.html
+++ b/src/app/places/timesheet/timesheet.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-      
+       
       <!-- <ion-button (click)="onOpenMenu()">
         Open
       </ion-button> -->
@@ -13,17 +13,8 @@
       </ion-button>
         </ion-buttons>
     <ion-grid>
-     
-      
        <ion-title>My Timesheet</ion-title> 
-      
-      
-       
-        
-      
-    
     </ion-grid>
-    
   </ion-toolbar>
 </ion-header>
 
@@ -31,20 +22,13 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-lg="6" offset-lg="3" size-sm="8" offset-sm="2" class="ion-text-center">
-        <ion-card>
-          <ion-card-header>
-            <ion-card-title class="ion-padding">{{ loadedPlaces[0].firstName }}</ion-card-title>
-            
-            
+            <ion-card-title class="ion-padding">Welcome, {{ loadedPlaces[0].firstName }}!</ion-card-title>
             <ion-card-subtitle>
               {{ date }}
             </ion-card-subtitle>
             <ion-card-subtitle>
               {{ time }}
-            </ion-card-subtitle>
-          </ion-card-header>
-          
-        </ion-card>
+            </ion-card-subtitle>  
       </ion-col>
     </ion-row>
   </ion-grid>
