--- a/src/app/places/leaverequest/leaverequest.page.html
+++ b/src/app/places/leaverequest/leaverequest.page.html
@@ -36,8 +36,8 @@
           >
             
             <ion-label>
-              <h1>{{ request.name}}</h1>
-              <h2>{{ request.reason }}</h2>
+              <h1>{{ request.type }}</h1>
+              <h2>{{ request.dateFrom | date}} - {{ request.dateTo | date}}</h2>
             </ion-label>
           </ion-item>
         
