--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -15,3 +15,13 @@
 <ion-content>
   <p>{{ job.businessType }}</p>
 </ion-content>
+
+<ion-button
+
+    margin
+    color="primary"
+    [routerLink]="['/', 'places', 'tabs', 'discover', 'edit', job.id]"
+    >Edit</ion-button
+  >
+
+
