--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -81,9 +81,9 @@
 
 .sidebar-title {
   font-size: 27px;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
-  text-shadow: 2px 2px 15px rgba($color: #000000, $alpha: 1.0);
-  text-decoration: underline;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  text-shadow: 2px 2px 15px rgba($color: #494949, $alpha: 1.0);
+  
 }
 
 ion-title {
