--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -16,23 +16,22 @@
 </ion-header>
 <!-- *ngFor="let job of jobs.slice(0)" -->
 
-<ion-content class="ion-padding">
-  <ion-segment value="my" color="primary" (ionChange)="onFilterUpdate($event)">
-    <ion-segment-button value="my">My Job Sites</ion-segment-button>
-    <ion-segment-button value="all">All Job Sites</ion-segment-button>
-  </ion-segment>
+<ion-content>
+  
   <ion-grid>
     <ion-row>
+      
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-        <ion-virtual-scroll 
-        [items]="listedLoadedJobs" 
-        approxItemHeight="70px"
+      <ion-searchbar [(ngModel)]="filterJobs" animated="true" inputmode="text" class="ion-padding"></ion-searchbar>  
+        <ion-list>
+        <ion-item-sliding
+        *ngFor="let job of loadedJobs | filter: filterJobs" 
+        #slidingItem
         >
           <ion-item
             
             [routerLink]="['/', 'places', 'tabs', 'discover', job.id]"
             detail
-            *virtualItem="let job"
           >
             <ion-thumbnail slot="start">
               <ion-img [src]="job.imageUrl"></ion-img>
@@ -42,7 +41,16 @@
               <p><ion-text color="primary">{{ job.jobAddress }}</ion-text></p>
             </ion-label>
           </ion-item>
-        </ion-virtual-scroll>
+          <ion-item-options>
+            <ion-item-option color="success" (click)="onCall(place.id, slidingItem)">
+              <ion-icon name="call" slot="icon-only"></ion-icon>
+            </ion-item-option>
+            <ion-item-option color="primary" (click)="onMail(place.id, slidingItem)">
+              <ion-icon name="mail" slot="icon-only"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+          </ion-item-sliding>
+          </ion-list>
       </ion-col>
     </ion-row>
   </ion-grid>
