--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -12,16 +12,75 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <p>{{ job.businessType }}</p>
-</ion-content>
+<ion-content class="ion-padding">
+    <div >
+    <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+            <ion-img [src]="job.imageUrl"></ion-img>
+        </ion-col>  
+    </ion-row>  
+    </div>
 
-<ion-button
+       <ion-grid>
+          
+         <ion-row>
+           <ion-col size-sm="6" offset-sm="3">
+              
+             <ion-card-content>
+                <ion-card> 
+                 
+               <ion-toolbar><ion-text>Contact Information</ion-text></ion-toolbar>
+              <ion-item>
+               <ion-card-subtitle>{{job.businessName}}</ion-card-subtitle>
+             
+             
+            </ion-item> 
+            
+             <ion-item>
+              <ion-card-subtitle>{{job.emailAddress}}</ion-card-subtitle>
+             </ion-item>
+            
+            
+             <ion-item>
+              <ion-card-subtitle>{{job.phoneNumber}}</ion-card-subtitle>
+             </ion-item>
 
-    margin
-    color="primary"
-    [routerLink]="['/', 'places', 'tabs', 'discover', 'edit', job.id]"
-    >Edit</ion-button
-  >
+             <ion-item>
+              <ion-card-subtitle>{{job.businessType}}</ion-card-subtitle>
+             </ion-item>
+            <ion-item>
+              <ion-label position="floating">Address</ion-label>
+             
+            </ion-item>
+          </ion-card>
+            
+          </ion-card-content>
+            
+          </ion-col>
+        </ion-row>
+        
+
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-grid>
+            <div style="display: flex; justify-content: center;">
+              <ion-row>
+                <ion-col >
+                  <ion-button
+
+                  margin
+                  color="primary"
+                  [routerLink]="['/', 'places', 'tabs', 'discover', 'edit', job.id]"
+                  >Edit</ion-button
+                >
+                </ion-col>
+              </ion-row>
+            </div>  
+      </ion-grid> 
+        </ion-col>
+      </ion-row >   
+       </ion-grid> 
+    </ion-content>
+    
 
 
