--- a/src/app/places/leaverequest/leaverequest-view/leaverequest-view.page.html
+++ b/src/app/places/leaverequest/leaverequest-view/leaverequest-view.page.html
@@ -4,9 +4,55 @@
       <ion-back-button defaultHref="/places/leaverequest"></ion-back-button>
     </ion-buttons>
     <ion-title>Request Detail</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button>
+        <ion-icon name="" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-<p>Show details of the leave request here.</p>
-</ion-content>
+<ion-content class="ion-padding">
+
+     <ion-grid>
+        
+       <ion-row>
+         <ion-col size-sm="6" offset-sm="3">
+            
+           <ion-card-content>
+              <ion-card> 
+               
+             <ion-toolbar><ion-text>Request Information</ion-text></ion-toolbar>
+          
+           <ion-item>
+            <ion-card-subtitle><ion-text>{{ request.name }}</ion-text></ion-card-subtitle>
+           </ion-item>
+          
+          
+           <ion-item>
+            <ion-card-subtitle><ion-text>Type:</ion-text> {{ request.type }}</ion-card-subtitle>
+           </ion-item>
+
+           <ion-item>
+            <ion-card-subtitle><ion-text>Reason:</ion-text> {{request.reason}}</ion-card-subtitle>
+           </ion-item>
+          <ion-item>
+            <ion-card-subtitle><ion-text>Approval Status: {{request.approval}}</ion-text></ion-card-subtitle>
+          </ion-item>
+          <ion-item>
+            <ion-card-subtitle><ion-text>From: </ion-text>{{request.dateFrom}}</ion-card-subtitle>
+          </ion-item>
+          <ion-item>
+            <ion-card-subtitle><ion-text>To: </ion-text>{{request.dateTo}}</ion-card-subtitle>
+          </ion-item>
+        </ion-card>
+          
+        </ion-card-content>
+          
+        </ion-col>
+      </ion-row>
+      
+
+       
+     </ion-grid> 
+  </ion-content>
