--- a/src/app/places/leaverequest/leaverequest.page.html
+++ b/src/app/places/leaverequest/leaverequest.page.html
@@ -19,35 +19,28 @@
 
 
 <ion-content class="ion-padding">
+  <ion-segment value="pending" color="primary" (ionChange)="onFilterUpdate($event)">
+    <ion-segment-button value="pending">Pending</ion-segment-button>
+    <ion-segment-button value="all">All Requests</ion-segment-button>
+  </ion-segment>
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
         
-        <ion-list>
-          <ion-item-sliding
-          *ngFor="let request of loadedRequests"
-          #slidingRequest
-          >
+        <ion-list *ngFor="let request of loadedRequests">
+          
             <ion-item
-            
             [routerLink]="['/', 'places', 'tabs', 'leaverequest', request.id]"
             detail
-            
           >
-            
             <ion-label>
               <h1>{{ request.type }}</h1>
               <h2>{{ request.dateFrom | date}} - {{ request.dateTo | date}}</h2>
             </ion-label>
           </ion-item>
-        
-          <ion-item-options>
-            <ion-item-option color="danger" (click)="onDelete(request.id, slidingRequest)">
-              <ion-icon name="trash" slot="icon-only"></ion-icon>
-            </ion-item-option>
-          </ion-item-options>
-          </ion-item-sliding>
+
           </ion-list>
+          
       </ion-col>
     </ion-row>
   </ion-grid>
