--- a/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -12,11 +12,73 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-button
+  <div >
+  <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+          <ion-img [src]="place.imageUrl"></ion-img>
+      </ion-col>  
+  </ion-row>  
+  </div>
 
-    margin
-    color="primary"
-    [routerLink]="['/', 'places', 'tabs', 'offers', 'edit', place.id]"
-    >Edit</ion-button
-  >
-</ion-content>
+     <ion-grid>
+        
+       <ion-row>
+         <ion-col size-sm="6" offset-sm="3">
+            
+           <ion-card-content>
+              <ion-card> 
+               
+             <ion-toolbar><ion-text>Contact Information</ion-text></ion-toolbar>
+            <ion-item>
+             <ion-card-subtitle>{{ place.firstName }}</ion-card-subtitle>
+           
+           
+          </ion-item> 
+          
+           <ion-item>
+            <ion-card-subtitle>{{ place.lastName }}</ion-card-subtitle>
+           </ion-item>
+          
+          
+           <ion-item>
+            <ion-card-subtitle>{{ place.phoneNumber }}</ion-card-subtitle>
+           </ion-item>
+
+           <ion-item>
+            <ion-card-subtitle>{{place.emailAddress}}</ion-card-subtitle>
+           </ion-item>
+          <ion-item>
+            <ion-card-subtitle>{{place.description}}</ion-card-subtitle>
+          </ion-item>
+          <ion-item>
+            <ion-card-subtitle>{{place.payGroup}}</ion-card-subtitle>
+          </ion-item>
+        </ion-card>
+          
+        </ion-card-content>
+          
+        </ion-col>
+      </ion-row>
+      
+
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-grid>
+          <div style="display: flex; justify-content: center;">
+            <ion-row>
+              <ion-col >
+                <ion-button
+
+                margin
+                color="primary"
+                [routerLink]="['/', 'places', 'tabs', 'offers', 'edit', place.id]"
+                >Edit</ion-button
+              >
+              </ion-col>
+            </ion-row>
+          </div>  
+    </ion-grid> 
+      </ion-col>
+    </ion-row >   
+     </ion-grid> 
+  </ion-content>
