--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -12,14 +12,18 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content>
+  
   <ion-grid>
     <ion-row>
+      
       <ion-col size="12" size-sm="8" offset-sm="2">
-        
-        <ion-list>
+      <ion-searchbar [(ngModel)]="filterTerm" animated="true" inputmode="text" class="ion-padding"></ion-searchbar>  
+        <ion-list >
           <ion-item-sliding
-          *ngFor="let place of loadedPlaces" #slidingItem
+          *ngFor="let place of loadedPlaces | filter: filterTerm"
+          #slidingItem
+          
           >
             <ion-item
             
