--- a/src/app/places/discover/new-job-site/new-job-site.page.html
+++ b/src/app/places/discover/new-job-site/new-job-site.page.html
@@ -38,7 +38,7 @@
         </ion-item>
         <ion-item>
           <ion-label position="floating">Address</ion-label>
-          <ion-input type="text"  formControlName="businessLocation"></ion-input>
+          <ion-input type="text"  formControlName="jobAddress"></ion-input>
         </ion-item>
       </ion-card>  
       </ion-card-content>  
