--- a/src/app/places/leaverequest/leaverequest-view/leaverequest-view.page.scss
+++ b/src/app/places/leaverequest/leaverequest-view/leaverequest-view.page.scss
@@ -3,5 +3,11 @@ ion-toolbar {
 }
 
 ion-text {
-  font-size: 15px;
+  font-size: 19px;
+  font-style: italic;
+}
+
+ion-card-subtitle {
+  color: black;
+  font-size: 17px;
 }
