--- a/src/app/places/offers/offer-bookings/offer-bookings.page.scss
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.scss
@@ -20,7 +20,7 @@ ion-text {
 
 ion-card {
   display:list-item;
-  height: 250px;
+  height:fit-content;
   box-shadow: 2px 2px 5px;
   align-content: center;
   background-color: #dddddd;
@@ -32,5 +32,9 @@ ion-toolbar {
 }
 
 ion-header {
+  text-align: center;
+}
+
+ion-card-content {
   text-align: center;
 }
