--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -22,8 +22,24 @@
     <ion-row>
       
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-      <ion-searchbar [(ngModel)]="filterJobs" animated="true" inputmode="text" class="ion-padding"></ion-searchbar>  
-        <ion-list>
+      
+       
+      
+        <div *ngIf="isLoading" class="ion-text-center">
+          <ion-spinner color="primary" ></ion-spinner>
+        </div>
+
+        <div class="ion-text-center" *ngIf="!isLoading && loadedJobs.length <= 0">
+        <p >
+          No work sites found.
+        </p>
+        <p>
+          Create one to get started!
+        </p>
+        <ion-button color="primary" routerLink="/places/tabs/discover/new">Create New Site</ion-button>
+        </div>
+      <ion-list *ngIf="!isLoading && loadedJobs.length > 0">
+        <ion-searchbar [(ngModel)]="filterJobs" animated="true" inputmode="text"></ion-searchbar>
         <ion-item-sliding
         *ngFor="let job of loadedJobs | filter: filterJobs" 
         #slidingItem
@@ -55,3 +71,4 @@
     </ion-row>
   </ion-grid>
 </ion-content>
+
