--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -13,49 +13,52 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-    <div >
+  <ion-grid>
     <ion-row>
         <ion-col size-sm="6" offset-sm="3">
             <ion-img [src]="job.imageUrl"></ion-img>
         </ion-col>  
-    </ion-row>  
-    </div>
+    </ion-row>
+  </ion-grid>
+
 
        <ion-grid>
           
-         <ion-row>
+         <ion-row >
            <ion-col size-sm="6" offset-sm="3">
-              
              <ion-card-content>
                 <ion-card> 
                  
                <ion-toolbar><ion-text>Contact Information</ion-text></ion-toolbar>
-              <ion-item>
-               <ion-card-subtitle>{{job.businessName}}</ion-card-subtitle>
-             
-             
-            </ion-item> 
-            
-             <ion-item>
-              <ion-card-subtitle>{{job.emailAddress}}</ion-card-subtitle>
-             </ion-item>
-            
-            
-             <ion-item>
-              <ion-card-subtitle>{{job.phoneNumber}}</ion-card-subtitle>
-             </ion-item>
+                 
 
-             <ion-item>
-              <ion-card-subtitle>{{job.businessType}}</ion-card-subtitle>
-             </ion-item>
-            <ion-item>
-              <ion-label position="floating">Address</ion-label>
+                
+                  <ion-item>
+                    <ion-card-subtitle>{{job.businessName}}</ion-card-subtitle>
+                  </ion-item> 
+                
+
+                
+                  <ion-item>
+                    <ion-card-subtitle>{{job.emailAddress}}</ion-card-subtitle>
+                  </ion-item>
+                
+
+                
+                  <ion-item>
+                    <ion-card-subtitle>{{job.phoneNumber}}</ion-card-subtitle>
+                  </ion-item>
+                
+                
+                
+                  <ion-item>
+                    <ion-card-subtitle>{{job.jobAddress}}</ion-card-subtitle>
+                  </ion-item>
+                  
+                  
              
-            </ion-item>
           </ion-card>
-            
           </ion-card-content>
-            
           </ion-col>
         </ion-row>
         
