--- a/src/app/places/leaverequest/leaverequest.page.html
+++ b/src/app/places/leaverequest/leaverequest.page.html
@@ -19,17 +19,31 @@
 
 
 <ion-content class="ion-padding">
-  <ion-segment value="pending" color="primary" (ionChange)="onFilterUpdate($event)">
+ <!--  <ion-segment value="pending" color="primary" (ionChange)="onFilterUpdate($event)">
     <ion-segment-button value="pending">Pending</ion-segment-button>
     <ion-segment-button value="all">All Requests</ion-segment-button>
-  </ion-segment>
+  </ion-segment> -->
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
-        
-        <ion-list *ngFor="let request of loadedRequests">
+        <div *ngIf="isLoading" class="ion-text-center">
+          <ion-spinner color="primary" ></ion-spinner>
+        </div>
+
+        <div class="ion-text-center" *ngIf="!isLoading && loadedRequests.length <= 0">
+          <p >
+            No requests found.
+          </p>
+          <p>
+            Create one to get started!
+          </p>
+          <ion-button size="small" color="primary" routerLink="/places/tabs/leaverequest/new">Create Request</ion-button>
+        </div>
+
+        <ion-list *ngIf="!isLoading && loadedRequests.length > 0" >
           
             <ion-item
+            *ngFor="let request of loadedRequests"
             [routerLink]="['/', 'places', 'tabs', 'leaverequest', request.id]"
             detail
           >
