--- a/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -2,12 +2,12 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button
-        defaultHref="'/places/tabs/offers/ + place.id'"
+        [defaultHref]="'/places/tabs/offers/' + placeId"
       ></ion-back-button>
     </ion-buttons>
     <ion-title>Edit {{ place.firstName }}</ion-title>
     <ion-buttons slot="primary">
-      <ion-button (click)="onUpdateEmployee()" >
+      <ion-button (click)="onUpdateEmployee()" [disabled]="!form?.valid">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -15,7 +15,10 @@
 </ion-header>
 
 <ion-content> 
-  <form [formGroup]="form">
+  <!-- <div  class="ion-text-center">
+    <ion-spinner color="primary"></ion-spinner>
+  </div> -->
+  <form [formGroup]="form" >
    <ion-grid>   
      <ion-row>
        <ion-col size-sm="6" offset-sm="3">
