--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -18,8 +18,20 @@
     <ion-row>
       
       <ion-col size="12" size-sm="8" offset-sm="2">
-      <ion-searchbar [(ngModel)]="filterTerm" animated="true" inputmode="text" class="ion-padding"></ion-searchbar>  
-        <ion-list >
+        
+          
+          <div *ngIf="isLoading" class="ion-text-center">
+            <ion-spinner color="primary" ></ion-spinner>
+          </div>
+      
+        
+        <div class="ion-text-center" *ngIf="!isLoading && loadedPlaces.length <= 0">         
+          <p>No employees found. </p>
+          <p>Create some to get started!</p>
+          <ion-button color="primary" routerLink="/places/tabs/offers/new">Create Employee</ion-button>
+        </div>
+        <ion-list *ngIf="!isLoading && loadedPlaces.length > 0">
+          <ion-searchbar [(ngModel)]="filterTerm" animated="true" inputmode="text" class="ion-padding"></ion-searchbar>
           <ion-item-sliding
           *ngFor="let place of loadedPlaces | filter: filterTerm"
           #slidingItem
