--- a/src/app/places/timesheet/timesheet.page.html
+++ b/src/app/places/timesheet/timesheet.page.html
@@ -22,7 +22,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-lg="6" offset-lg="3" size-sm="8" offset-sm="2" class="ion-text-center">
-            <ion-card-title class="ion-padding">Welcome, {{ loadedPlaces[0].firstName }}!</ion-card-title>
+            <ion-card-title class="ion-padding">Welcome!</ion-card-title>
             <ion-card-subtitle>
               {{ date }}
             </ion-card-subtitle>
