--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -24,8 +24,7 @@
             <ion-spinner color="primary" ></ion-spinner>
           </div>
       
-        
-        <div class="ion-text-center" *ngIf="!isLoading && loadedPlaces.length <= 0">         
+        <div class="ion-text-center" *ngIf="!isLoading && (!loadedPlaces || loadedPlaces.length <= 0)">         
           <p>No employees found. </p>
           <p>Create some to get started!</p>
           <ion-button color="primary" routerLink="/places/tabs/offers/new">Create Employee</ion-button>
