--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -36,9 +36,10 @@
           #slidingItem
           
           >
+          <!-- [routerLink]="['/', 'places', 'tabs', 'offers', place.id]" -->
             <ion-item
-            
             [routerLink]="['/', 'places', 'tabs', 'offers', place.id]"
+            
             detail
             
           >
