--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -14,6 +14,9 @@
 
 
 <ion-content> 
+  <div class="ion-text-center" *ngIf="isLoading">
+    <ion-spinner color="primary"></ion-spinner>
+  </div>
   <form *ngIf="form" [formGroup]="form" #f="ngForm" (ngSubmit)="onSubmit()">
    <ion-grid>   
      <ion-row>
@@ -57,7 +60,7 @@
             </ion-item>
         </ion-card>
 
-        <ion-grid>
+        
           <div style="display: flex; justify-content: center;">
             <ion-row>
               <ion-col >
@@ -76,7 +79,7 @@
               </ion-col>
             </ion-row>
           </div>  
-    </ion-grid>   
+      
       </ion-card-content>
     </ion-col>
   </ion-row >   
