--- a/src/app/places/leaverequest/new-request/new-request.page.html
+++ b/src/app/places/leaverequest/new-request/new-request.page.html
@@ -107,7 +107,7 @@
           expand="block" 
           [disabled]="!f.valid || !datesValid()"
           >
-            Create
+            Send Request
           </ion-button>
         </ion-buttons>
           </ion-col>
