--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -15,10 +15,13 @@
 <ion-content class="ion-padding">
   <ion-grid>
     <ion-row>
+      <ion-col size-md="6" offset-md="3" text-center *ngIf="isLoading">
+        <ion-spinner color="primary"></ion-spinner>
+      </ion-col>
       <ion-col 
       size-md="6" 
       offset-md="3" 
-      *ngIf="!loadedBookings || loadedBookings.length <= 0"
+      *ngIf="!isLoading && (!loadedBookings || loadedBookings.length <= 0)"
       text-center
       >
     
@@ -26,10 +29,12 @@
     </ion-col>
 
       
+
+      
       <ion-col 
       size-md="6" 
       offset-md="3"
-      *ngIf="loadedBookings && loadedBookings.length > 0"
+      *ngIf="!isLoading && loadedBookings && loadedBookings.length > 0"
       >
         <ion-list>
           <ion-item-sliding *ngFor="let booking of loadedBookings" #slidingBooking>
