--- a/src/app/places/discover/place-detail/place-detail.page.scss
+++ b/src/app/places/discover/place-detail/place-detail.page.scss
@@ -2,14 +2,11 @@ ion-img {
   height: 100px;
 }
 
-ion-card-title {
-  color: rgb(0, 0, 0);
-}
 
 ion-card-subtitle {
   font-size: 15px;
   text-align: center;
-  
+  color: black;
   
   
 }
