--- a/src/app/places/leaverequest/leaverequest.page.html
+++ b/src/app/places/leaverequest/leaverequest.page.html
@@ -2,11 +2,8 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-      <!-- <ion-button (click)="onOpenMenu()">
-        Open
-      </ion-button> -->
     </ion-buttons>
-    <ion-title>My Requests</ion-title>
+    <ion-title>Your Requests</ion-title>
     <ion-buttons slot="end">
       <ion-button routerLink="/places/tabs/leaverequest/new">
         <ion-icon name="add" slot="icon-only"></ion-icon>
@@ -15,46 +12,49 @@
   </ion-toolbar>
 </ion-header>
 
-
-
-
-<ion-content class="ion-padding">
- <!--  <ion-segment value="pending" color="primary" (ionChange)="onFilterUpdate($event)">
-    <ion-segment-button value="pending">Pending</ion-segment-button>
-    <ion-segment-button value="all">All Requests</ion-segment-button>
-  </ion-segment> -->
+<ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="2">
-        <div *ngIf="isLoading" class="ion-text-center">
-          <ion-spinner color="primary" ></ion-spinner>
-        </div>
+      <ion-col size-md="6" offset-md="3" class="ion-text-center" *ngIf="isLoading">
+        <ion-spinner color="primary"></ion-spinner>
+      </ion-col>
+      <ion-col
+        size-md="6"
+        offset-md="3"
+        *ngIf="!isLoading && (!loadedRequests || loadedRequests.length <= 0)"
+        class="ion-text-center"
+      >
+        <p>No requests found!</p>
+        <p>To create one, press the button below or the plus in the top right corner.</p>
+        <ion-button size="small" color="primary" routerLink="/places/tabs/leaverequest/new">Create Request</ion-button>
 
-        <div class="ion-text-center" *ngIf="!isLoading && loadedRequests.length <= 0">
-          <p >
-            No requests found.
-          </p>
-          <p>
-            Create one to get started!
-          </p>
-          <ion-button size="small" color="primary" routerLink="/places/tabs/leaverequest/new">Create Request</ion-button>
-        </div>
-
-        <ion-list *ngIf="!isLoading && loadedRequests.length > 0" >
-          
-            <ion-item
+      </ion-col>
+      <ion-col
+        size-md="6"
+        offset-md="3"
+        *ngIf="!isLoading && loadedRequests && loadedRequests.length > 0"
+      >
+        <ion-list>
+          <ion-item-sliding
             *ngFor="let request of loadedRequests"
-            [routerLink]="['/', 'places', 'tabs', 'leaverequest', request.id]"
-            detail
+            #slidingRequest
           >
-            <ion-label>
-              <h1>{{ request.type }}</h1>
-              <h2>{{ request.dateFrom | date}} - {{ request.dateTo | date}}</h2>
-            </ion-label>
-          </ion-item>
-
-          </ion-list>
-          
+            <ion-item [routerLink]="['/', 'places', 'tabs', 'leaverequest', request.id]" detail>
+              <ion-label>
+                <h5>{{ request.type }}</h5>
+                <p> {{ request.dateFrom | date }} - {{ request.dateTo | date }}</p>
+              </ion-label>
+            </ion-item>
+            <ion-item-options>
+              <ion-item-option
+                color="danger"
+                (click)="onDelete(request.id, slidingRequest)"
+              >
+                <ion-icon name="trash" slot="icon-only"></ion-icon>
+              </ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
+        </ion-list>
       </ion-col>
     </ion-row>
   </ion-grid>
