--- a/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -6,14 +6,18 @@
     
     
     <ion-title> {{ isLoading ? 'Loading...' : place.firstName }} {{ isLoading ? 'Loading...' : place.lastName }} </ion-title>
-    
+    <ion-buttons slot="primary">
+      <ion-button [disabled]>
+        <ion-icon name="" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     
   </ion-toolbar>
 </ion-header>
 
 <ion-content >
   
-  <ion-grid class="ion-no-padding" *ngIf="!isLoading">
+  <ion-grid class="ion-padding" *ngIf="!isLoading">
   <div >
   <ion-row>
       <ion-col size-sm="6" offset-sm="3">
