--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,12 +11,12 @@
   --ion-color-primary-shade: #ffffff;
   --ion-color-primary-tint: #ad3538; */
 
-  --ion-color-primary: #222428;
+  --ion-color-primary: #601610;
   --ion-color-primary-rgb: 90,78,68;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 0,0,0;
-  --ion-color-primary-shade: #1e2023;
-  --ion-color-primary-tint: #383a3e;
+  --ion-color-primary-shade: #721c16;
+  --ion-color-primary-tint: #702d28;
 
   --ion-color-secondary: #4a8542;
   --ion-color-secondary-rgb: 74,133,66;
