--- a/src/app/places/discover/edit-job/edit-job.page.html
+++ b/src/app/places/discover/edit-job/edit-job.page.html
@@ -2,12 +2,12 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button
-        defaultHref="'/places/tabs/discover/ + place.id'"
+        defaultHref="'/places/tabs/discover/ + job.id'"
       ></ion-back-button>
     </ion-buttons>
-    <ion-title>Edit {{ job.businessName }}</ion-title>
+    <ion-title>Edit {{ job?.businessName }}</ion-title>
     <ion-buttons slot="primary">
-      <ion-button (click)="onUpdateJob()" >
+      <ion-button (click)="onUpdateJob()" [disabled]="!form?.valid" >
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -15,7 +15,10 @@
 </ion-header>
 
 <ion-content> 
-  <form [formGroup]="form">
+  <div  class="ion-text-center" *ngIf="isLoading">
+    <ion-spinner color="primary"></ion-spinner>
+  </div>
+  <form [formGroup]="form" *ngIf="!isLoading">
    <ion-grid>   
      <ion-row>
        <ion-col size-sm="6" offset-sm="3">
