--- a/src/app/places/discover/new-job-site/new-job-site.page.html
+++ b/src/app/places/discover/new-job-site/new-job-site.page.html
@@ -44,6 +44,11 @@
       </ion-card-content>  
       </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col size-sm="3" offset-sm="3">
+        <app-location-picker></app-location-picker>
+      </ion-col>
+    </ion-row>
 
   <ion-row>
     <ion-col size-sm="6" offset-sm="3">
@@ -72,4 +77,3 @@
    </ion-grid> 
   </form>
 </ion-content>
-
