--- a/src/app/places/places.page.html
+++ b/src/app/places/places.page.html
@@ -6,10 +6,10 @@
       <ion-label>TimeSheet</ion-label>
       <ion-icon name="calendar"></ion-icon>
     </ion-tab-button>
-    <!-- <ion-tab-button tab="discover">
+    <ion-tab-button tab="discover">
       <ion-label>Jobs</ion-label>
       <ion-icon name="business"></ion-icon>
-    </ion-tab-button> -->
+    </ion-tab-button>
     <ion-tab-button tab="offers">
       <ion-label>Employees</ion-label>
       <ion-icon name="person"></ion-icon>
