--- a/src/app/places/discover/new-job-site/new-job-site.page.html
+++ b/src/app/places/discover/new-job-site/new-job-site.page.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 <ion-content> 
-  <form *ngIf="form" [formGroup]="form" #f="ngForm" (ngSubmit)="onSubmit()">
+  <form *ngIf="form" [formGroup]="form" #f="ngForm" (ngSubmit)="onSubmit()" >
    <ion-grid>   
      <ion-row>
        <ion-col size-sm="6" offset-sm="3">
@@ -36,17 +36,17 @@
           <ion-label position="floating">Business Type</ion-label>
           <ion-input type="text" formControlName="businessType"></ion-input>
         </ion-item>
-        <ion-item>
+        <!-- <ion-item>
           <ion-label position="floating">Address</ion-label>
           <ion-input type="text"  formControlName="jobAddress"></ion-input>
-        </ion-item>
+        </ion-item> -->
       </ion-card>  
       </ion-card-content>  
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size-sm="3" offset-sm="3">
-        <app-location-picker></app-location-picker>
+        <app-location-picker (locationPick)="onLocationPicked($event)"></app-location-picker>
       </ion-col>
     </ion-row>
 
