--- a/src/app/places/discover/place-detail/place-detail.page.scss
+++ b/src/app/places/discover/place-detail/place-detail.page.scss
@@ -1,3 +1,13 @@
+
+.location-image {
+  width: 100%;
+  height: 25rem;
+  max-height: 30vh;
+  object-fit: cover;
+}
+
+
+
 ion-img {
   height: 100px;
 }
