--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -54,7 +54,7 @@
             </ion-thumbnail>
             <ion-label>
               <h2>{{ job.businessName }}</h2>
-              <p><ion-text color="primary">{{ job.jobAddress }}</ion-text></p>
+              <p><ion-text color="primary">{{ job.location.address }}</ion-text></p>
             </ion-label>
           </ion-item>
           <ion-item-options>
