--- a/src/app/places/discover/new-job-site/new-job-site.page.html
+++ b/src/app/places/discover/new-job-site/new-job-site.page.html
@@ -36,20 +36,21 @@
           <ion-label position="floating">Business Type</ion-label>
           <ion-input type="text" formControlName="businessType"></ion-input>
         </ion-item>
-        <!-- <ion-item>
+        <ion-item>
           <ion-label position="floating">Address</ion-label>
           <ion-input type="text"  formControlName="jobAddress"></ion-input>
-        </ion-item> -->
+        </ion-item>
       </ion-card>  
       </ion-card-content>  
       </ion-col>
     </ion-row>
-    <ion-row>
+    
+    <ion-row class="ion-text-center">
       <ion-col size-sm="3" offset-sm="3">
         <app-location-picker (locationPick)="onLocationPicked($event)"></app-location-picker>
       </ion-col>
     </ion-row>
-
+    
   <ion-row>
     <ion-col size-sm="6" offset-sm="3">
       <ion-grid>
