--- a/src/app/places/discover/new-job-site/new-job-site.page.scss
+++ b/src/app/places/discover/new-job-site/new-job-site.page.scss
@@ -1,3 +1,14 @@
 ion-toolbar {
   text-align: center;
 }
+.ion-text-center {
+  width: 30rem;
+  max-width: 100%;
+  height: 20rem;
+  max-height: 30vh;
+  margin: auto;
+  display: contents;
+  justify-content: center;
+  align-items: center;
+
+}
