--- a/src/app/shared/pickers/map-modal/map-modal.component.html
+++ b/src/app/shared/pickers/map-modal/map-modal.component.html
@@ -1,12 +1,17 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Pick Location</ion-title>
+    <ion-title>{{ title }}</ion-title>
     <ion-buttons slot="primary">
-      <ion-button (click)="onCancel()">Cancel</ion-button>
+      <ion-button (click)="onCancel()">{{ closeButtonText }}</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="map" #map></div>
+  
+  <div class="map" #map>
+
+
+  </div>
+ <ion-searchbar *ngIf="closeButtonText === 'Cancel'"></ion-searchbar> 
 </ion-content>
