--- a/src/app/places/discover/new-job-site/new-job-site.page.html
+++ b/src/app/places/discover/new-job-site/new-job-site.page.html
@@ -47,7 +47,18 @@
     
     <ion-row class="ion-text-center">
       <ion-col size-sm="3" offset-sm="3">
-        <app-location-picker (locationPick)="onLocationPicked($event)"></app-location-picker>
+        <app-location-picker 
+        [showPreview]="form.get('location').value"
+        (locationPick)="onLocationPicked($event)"
+        ></app-location-picker>
+      </ion-col>
+    </ion-row>
+    <ion-row class="ion-text-center">
+      <ion-col size-sm="3" offset-sm="3">
+        <app-image-picker 
+        [showPreview]="form.get('image').value"
+        (imagePick)="onImagePicked($event)"
+        ></app-image-picker>
       </ion-col>
     </ion-row>
     
