--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -65,6 +65,11 @@
                 <ion-label position="floating">Pay Group</ion-label>
                 <ion-input type="text"  autocorrect formControlName="payGroup"></ion-input>
             </ion-item>
+            <ion-item>
+              <ion-label position="floating">Temporary Password</ion-label>
+              <ion-input type="text"  autocorrect formControlName="password"></ion-input>
+          </ion-item>
+            
         </ion-card>
 
         
