--- a/src/global.scss
+++ b/src/global.scss
@@ -20,6 +20,13 @@ ion-content {
   --ion-background-color: #dddada;
 }
 
+.alert {
+  text-align: center;
+}
+
+.alert  {
+  text-align: center;
+}
 
 
 
